<resources>
    <string name="app_name">股票行情</string>
    <string name="title_activity_all_stock">新增自选</string>
    <string name="title_activity_stock_info">股票详情</string>
    <string name="action_stock_sh">沪股列表</string>
    <string name="action_stock_sz">深股列表</string>
    <string name="action_stock_hk">港股列表</string>
    <string name="action_settings">Settings</string>
    <string name="internet_error">网络异常,请检查网络设置</string>
    <string name="loading">加载中…</string>
    <string name="name">股票名称</string>
    <string name="openPrice">今日开盘价</string>
    <string name="closePrice">昨日收盘价</string>
    <string name="nowPrice">当前价格</string>
    <string name="todayMax">今日最高价</string>
    <string name="todayMin">今日最低价</string>
    <string name="competBuyPrice">竞买价</string>
    <string name="competSellPrice">竞卖价</string>
    <string name="tradeNum">成交量</string>
    <string name="tradeAmount">成交金额</string>
    <string name="buy1_n">买一</string>
    <string name="buy1_m">买一报价</string>
    <string name="buy2_n">买二</string>
    <string name="buy2_m">买二报价</string>
    <string name="buy3_n">买三</string>
    <string name="buy3_m">买三报价</string>
    <string name="buy4_n">买四</string>
    <string name="buy4_m">买四报价</string>
    <string name="buy5_n">买五</string>
    <string name="buy5_m">买五报价</string>
    <string name="sell1_n">卖一</string>
    <string name="sell1_m">卖一报价</string>
    <string name="sell2_n">卖二</string>
    <string name="sell2_m">卖二报价</string>
    <string name="sell3_n">卖三</string>
    <string name="sell3_m">卖三报价</string>
    <string name="sell4_n">卖四</string>
    <string name="sell4_m">卖四报价</string>
    <string name="sell5_n">卖五</string>
    <string name="sell5_m">卖五报价</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="diff_money">涨跌金额</string>
    <string name="diff_rate">涨跌幅度</string>
    <string name="swing">振幅</string>
    <string name="symbol">代码</string>
    <string name="engname">英文名</string>
    <string name="lasttrade">最新价</string>
    <string name="prevclose">昨收</string>
    <string name="open">今开</string>
    <string name="high">最高</string>
    <string name="low">最低</string>
    <string name="volume">成交量</string>
    <string name="amount">成交额</string>
    <string name="ticktime">时间</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="low_52week">52周最低</string>
    <string name="high_52week">52周最高</string>
    <string name="stocks_sum">总股本</string>
    <string name="pricechange">涨跌额</string>
    <string name="changepercent">涨跌幅</string>
    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>

</resources>
